--- a/Paper/Supplements.tex
+++ b/Paper/Supplements.tex
@@ -177,6 +177,14 @@ since $\frac{\Gamma(k+1)}{\Gamma(k)} =k$ we can re-write the likelihood to:
 
 \begin{figure}
 \centering
+\includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_2and3_supplement-1.pdf}
+\caption{\label{fig:fig3_2} Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
+\end{figure}
+
+OR
+
+\begin{figure}
+\centering
 \includegraphics{ATE_Revisions_files/figure-latex/figResult2_2_Supplements-1.pdf}
 \caption{\label{fig:figResult3_2_Supplements} Fit to the data}
 \end{figure}
