--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -84,7 +84,7 @@
 }
 %%% END HELPER CODE
 
-\myexternaldocument{Paper/Supplements}
+\myexternaldocument{Paper/Supplements_Review}
 
 \usepackage{setspace}
 \onehalfspacing
